<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_login_activity"
        android:title="@string/inicio"
        android:icon="@drawable/ic_menu_inicio" />

    <item
        android:id="@+id/inquilinoFragment"
        android:title="@string/busco_habitacion"
        android:icon="@drawable/ic_menu_busco"/>

    <item
        android:id="@+id/propietarioFragment"
        android:title="@string/ofrezco_habitacion"
        android:icon="@drawable/ic_menu_ofrezco"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/cerrar_sesion"
        android:icon="@android:drawable/ic_lock_power_off" />

    <item
        android:id="@+id/adminFragment"
        android:title="@string/panel_admin"
        android:icon="@drawable/ic_menu_panel"
        android:visible="true" /> <!-- Lo ocultamos por defecto -->
</menu>
