<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp"
    tools:ignore="KeyboardInaccessibleWidget">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Imagen -->
        <ImageView
            android:id="@+id/imageHabitacion"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/foto1" />

        <!-- Título -->
        <TextView
            android:id="@+id/tituloHabitacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/se_alquila_habitacion_cerca_del_retiro_madrid"
            android:textColor="@color/color_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/direccionHabitacion"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:text="@string/calle_sirio_madrid"
            android:textColor="@color/color_text"
            android:textSize="14sp" />
        <!--        con el width y el height se ajusta el tamaño de la imagen dividimos en 1/3 para que cojan los tres TextView-->

        <!-- Características -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/caracteristicaCama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cama_individual"
                android:textColor="@color/color_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/caracteristicaBano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bano_privado"
                android:textColor="@color/color_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/caracteristicaTamano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/metros"
                android:textColor="@color/color_text"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Precio -->
        <TextView
            android:id="@+id/precioHabitacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/precio"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Descripción -->
        <TextView
            android:id="@+id/descripcionHabitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/descripcion"
            android:textColor="@color/color_text"
            android:textSize="14sp" />
        <!--telefono contacto-->
        <TextView
            android:id="@+id/telefonoContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/telefono_de_contacto"
            android:textColor="@color/color_text"
            android:textSize="14sp" />

        <!-- Botón de contacto -->
        <Button
            android:id="@+id/btnModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/modificarAnuncio"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/eliminarAnuncio"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <!--    se utiliza cardview para que las imagenes  sean redondeadas-->
</com.google.android.material.card.MaterialCardView>
