<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="32dp"
    android:backgroundTint="@android:color/white"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <!-- Descripción de la habitación -->
        <TextView
            android:id="@+id/tvDescripcionHabitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_de_la_habitacion"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombreInquilino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_inquilino"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/tvTelefonoContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/telefono_de_contacto"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvemailContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/email"
            android:textSize="14sp" />

        <!-- Fechas de inicio y fin -->
        <TextView
            android:id="@+id/tvFechaInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fecha_de_inicio"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvFechaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/fecha_de_fin"
            android:textSize="14sp" />
        <!-- Fecha de la reserva -->
        <TextView
            android:id="@+id/tvFechaReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/fecha_de_la_reserva"
            android:textSize="14sp" />

        <!-- Estado -->
        <TextView
            android:id="@+id/tvEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/estado_pendiente"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
